[workspace]
members = [
    "apps/*",
    "core/*",
]
resolver = "2" # Super duper important for bevy!

[workspace.package]
version = "0.1.0"
authors = ["PikminGuts92"]
edition = "2021"

[workspace.dependencies]
clap = { version = "4.3.11", features = ["derive"] }
itertools = "0.12.0"
lazy_static = "1.4.0"
pikaxe = { package = "grim", path = "../grim/core/grim", features = [ "midi", "model" ] }
log = "0.4.19"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.52"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'  # Optimize for size
strip = true