[workspace]
members = [
    "apps/*",
    "core/*",
]
resolver = "2" # Super duper important for bevy!

[workspace.package]
version = "0.1.0"
authors = ["PikminGuts92"]
edition = "2021"

[workspace.dependencies]
clap = { version = "4.4.18", features = ["derive"] }
itertools = "0.12.0"
lazy_static = "1.4.0"
#pikaxe = { package = "grim", path = "../grim/core/grim", features = [ "midi", "model" ] }
pikaxe = { package = "grim", git = "https://github.com/PikminGuts92/grim.git", features = [ "midi", "model" ], branch = "dev" }
log = "0.4.20"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'  # Optimize for size
strip = true
