[workspace]
members = [
    "apps/*",
    "core/*",
]
resolver = "2" # Super duper important for bevy!

[workspace.package]
version = "0.1.0"
authors = ["PikminGuts92"]
edition = "2024"

[workspace.dependencies]
bevy = { version = "0.16.0", features = ["bevy_dev_tools"] }
bevy_fly_camera = "0.16.0"
bevy_infinite_grid = "0.15.0"
bevy_rapier3d = { version = "0.30.0", features = [ "simd-stable" ] }
clap = { version = "4.4.18", features = ["derive"] }
itertools = "0.14.0"
#pikaxe = { package = "pikaxe", path = "../grim/core/pikaxe", features = [ "midi", "model" ] }
pikaxe = { package = "pikaxe", git = "https://github.com/PikminGuts92/pikaxe.git", features = [ "midi", "model" ], branch = "dev" }
log = "0.4.20"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "2.0.12"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z' # Optimize for size
strip = true
