[package]
name = "character_creator"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bevy = { version = "0.13.2" }
#bevy_fly_camera = "0.10.0"
bevy_fly_camera = { git = "https://github.com/Cyannide/bevy_fly_camera.git", branch = "master" }
bevy_infinite_grid = "0.12.0"
clap = { workspace = true }
pikaxe = { workspace = true }
pikaxe_bevy = { path = "../../core/pikaxe_bevy" }
log = { workspace = true }
