[package]
name = "preview_ui"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true }
bevy_egui = { version = "0.34.1", features = [ "immutable_ctx" ] }
bevy_fly_camera = { workspace = true }
bevy_infinite_grid = { workspace = true }
egui_extras = { version = "0.31.1", features = [ "svg" ] }
font-awesome-as-a-crate = "0.3.0"
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
# native-dialog = "0.6.1"
pikaxe = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1.7"
