[package]
name = "pikaxe_bevy"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bevy = { version = "0.12.1", default-features = false, features = [ "bevy_pbr", "bevy_render", "multi-threaded" ] }
pikaxe = { workspace = true }
futures-lite = { version = "2.2.0" }
log = { workspace = true }
