[package]
name = "pikaxe_bevy"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true }
bevy_mod_inverse_kinematics = { git = "https://github.com/PikminGuts92/bevy_mod_inverse_kinematics.git", branch = "bevy16" }
bevy_rapier3d = { workspace = true }
pikaxe = { workspace = true }
futures-lite = { version = "2.6.0" }
log = { workspace = true }
